[tool.poetry]
name = "uv-std-app"
version = "0.1.0"
description = "Dash app to compare UV traces"
authors = ["Shaurya Chanana <15051933+chanana@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "uv_std_app"}]

[tool.poetry.dependencies]
python = "~3.9"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"
black = "^22.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
